# CubeRover

./: .gitattributes  .gitignore  DOCUMENTATION.md  README.md  git-profile.sh  setup_pi.sh
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
Arduino/main/: ControlPacket.h  main.ino
Arduino_ROS/: Arduino_ROS.ino  README-ArduinoSetup.md  commands.h  messages.cpp  messages.h  motor_commands.hpp  motor_driver.cpp  motor_driver.h  motor_timer.cpp  motor_timer.h  servo.cpp  servo.h
Misc/: test_dashboard.json
Testing/PySerial/: teensy_telemetry.py  tester.py
Testing/PySerial/DAQ/: DAQ.ino  motor_driver.cpp  motor_driver.h
scripts/: run_nav2.sh  run_sim.sh  setup.sh
sim_data/: bag_extractor.py
sim_data/extracted_data/11172025/11-21-10/pose_data/: pose.csv
src/bno055/bno055/params/: bno055_params.yaml
src/bno055/launch/: bno055.launch.py
src/camera_ros/: package.xml
src/camera_ros/launch/: camera.launch.py
src/camera_ros/src/: CameraNode.cpp
src/controller_mode/: package.xml  setup.cfg  setup.py
src/controller_mode/controller_mode/: controller_input.py  controller_main.py  input_converter.py
src/myrosey_description/: CMakeLists.txt  package.xml
src/myrosey_description/urdf/: controllers.yaml  roseybot.urdf.xacro  roseybot_colors.urdf.xacro  roseybot_control.urdf.xacro  roseybot_description.urdf.xacro
src/myrosey_description/urdf/description/: roseybot_gazebo.urdf.xacro  roseybot_sensors.urdf.xacro
src/nav2_stack/: package.xml  pose.csv  pose_norm.csv  pose_straight.csv  setup.cfg  setup.py
src/nav2_stack/behavior_trees/: navigate_recovery.xml
src/nav2_stack/config/: ekf.yaml  nav2_param.yaml  nav2_param2.yaml
src/nav2_stack/launch/: nav2.launch.py  waypoint.launch.py
src/nav2_stack/maps/: map.pgm  map.yaml
src/nav2_stack/nav2_stack/: path_follower.py  pose_pub.py  test_end_to_end.py
src/pi_controller/: package.xml  setup.cfg  setup.py
src/pi_controller/launch/: launch.py
src/pi_controller/pi_controller/: command_interface.py  python_serial_bridge.py  python_serial_teensy.py
src/rosey_sim/: package.xml  setup.cfg  setup.py
src/rosey_sim/config/: ros_gz_bridge.yaml
src/rosey_sim/launch/: rosey_gz.launch.py
src/rosey_sim/rosey_sim/: covariance_relay.py
src/rosey_sim/worlds/: world.world
src/roseybot_control/: CMakeLists.txt  package.xml  pytest.ini  roseybot_arduino.xml
src/roseybot_control/bringup/config/: bno055.yaml  diffbot_controllers.yaml  ekf.yaml  joystick.yaml  roseybot_controllers.yaml  um7.yaml
src/roseybot_control/bringup/launch/: hardware_startup.launch.py  imu_boot.launch.py  joystick.launch.py  ros2_control.launch.py  rviz.launch.py  state_pub.launch.py
src/roseybot_control/bringup/rviz/: roseybot.rviz
src/roseybot_control/description/robot/: roseybot_colors.urdf.xacro  roseybot_description.urdf.xacro
src/roseybot_control/description/ros2_control/: roseybot_control.urdf.xacro
src/roseybot_control/description/urdf/: roseybot.urdf.xacro  roseybot_sim.urdf.xacro
src/roseybot_control/hardware/: diffbot_system.cpp  roseybot_system.cpp
src/roseybot_control/hardware/include/: diffbot_system.hpp  wheel.hpp
src/roseybot_control/hardware/include/roseybot_arduino/: ROS_Arduino.hpp  commands.h  messages.h  roseybot_system.hpp  wheel.hpp
src/roseybot_control/test/: README-EndToEnd.md  bag_topics.py  bag_topics.sh  end_to_end.sh  pytest.ini  start_rosey.sh  test_bag.py  test_end_to_end.py  test_ros_example.cpp  test_topic.py  test_wheel.cpp
src/roseybot_nav/: CMakeLists.txt  package.xml
src/roseybot_nodes/: CMakeLists.txt  package.xml
src/roseybot_nodes/src/: opti-odom.cpp
src/rover_bringup/: CMakeLists.txt  package.xml
src/rover_bringup/config/: rover.params.yaml
src/rover_bringup/launch/: ground.launch.xml  rover.launch.py  rover.launch.xml  rovercam.launch.xml  roverhead.launch.xml
src/rover_groundstation/: package.xml  setup.cfg  setup.py
src/rover_groundstation/rover_groundstation/: Data_Processor.py  camera_calibration.py  health_monitor.py  image_sub.py  imu_bag.py  mocap_bag.py  motor_bag.py  rover_gui.py  test_console.py  test_console_main.py  universal_bag.py
src/rover_groundstation/rover_groundstation/rover_gui/: gui_interface.py  plot_node.py  testhandle_node.py
src/rover_interfaces/: CMakeLists.txt  package.xml
src/rover_interfaces/action/: TestCommand.action  angturn.action  posaction.action  velaction.action
src/rover_interfaces/msg/: IMUData.msg  IMUPose.msg  MotorData.msg  RoverCommand.msg  TelemData.msg
src/rover_interfaces/srv/: BagStart.srv  RoverCommand.srv  TurnCommand.srv  VelocityCommand.srv
src/rover_node_pkg/: package.xml  requirements.txt  setup.cfg  setup.py
src/rover_node_pkg/rover_node_pkg/: command_interface.py  python_serial_bridge.py  vel_action_server.py
tests/: test_example.py  test_hello.py
